--- a/packages/compose/zcash/docker-compose.yml
+++ b/packages/compose/zcash/docker-compose.yml
@@ -72,7 +72,9 @@ services:
   grafana:
     image: $GF_IMAGE
     environment: 
-      - GF_INSTALL_PLUGINS=grafana-piechart-panel 
+      - GF_INSTALL_PLUGINS=grafana-piechart-panel
+      - GF_SECURITY_ADMIN_USER=$GF_SECURITY_ADMIN_USER
+      - GF_SECURITY_ADMIN_PASSWORD=$GF_SECURITY_ADMIN_PASSWORD
     entrypoint:
       - bash 
       - /run.sh
@@ -83,10 +85,10 @@ services:
     restart: always
     depends_on:
       - loki
-#    logging:
-#      driver: loki
-#      options:
-#        loki-url: 'http://localhost:3100/api/prom/push'
+    logging:
+      driver: loki
+      options:
+        loki-url: 'http://localhost:3100/api/prom/push'
 
   prometheus:
     image: $PROM_IMAGE
