--- a/packages/compose/zcash/docker-compose-zcashd.yml
+++ b/packages/compose/zcash/docker-compose-zcashd.yml
@@ -15,9 +15,10 @@ services:
       - ZCASHD_RPCPASSWORD=$ZCASHD_RPCPASSWORD
       - ZCASHD_RPCUSER=$ZCASHD_RPCUSER
       - ZCASHD_TXINDEX=$ZCASHD_TXINDEX
+      - ZCASHD_METRICSIP=$ZCASHD_METRICSIP
     mem_limit: 15G
     ports:
-      - "0.0.0.0:$ZCASHD_P2P:8232"
+      - "0.0.0.0:$ZCASHD_P2P:8233"
       - "$ZCASHD_PROMETHEUSPORT:$ZCASHD_PROMETHEUSPORT"
     restart: always
 
