--- a/packages/jenkins_pipelines/zcash-lite-cluster/Jenkinsfile
+++ b/packages/jenkins_pipelines/zcash-lite-cluster/Jenkinsfile
@@ -2,13 +2,35 @@ pipeline {
 
 agent any
 
+environment {
+    # common environment
+    GIT_CRED = vault path: 'secrets/COMMON', key: 'GIT_CRED', vaultUrl: 'https://192.168.1.135:8200', credentialsId: 'vault-root-token', engineVersion: "2"
+    GIT_URL = vault path: 'secrets/COMMON', key: 'GIT_URL', vaultUrl: 'https://192.168.1.135:8200', credentialsId: 'vault-root-token', engineVersion: "2"
+    SERVER_URL = vault path: 'secrets/COMMON', key: 'SERVER_URL', vaultUrl: 'https://192.168.1.135:8200', credentialsId: 'vault-root-token', engineVersion: "2"
+    LOG_LEVEL='debug'
+    
+    # pipeline configuration
+    
+    }
+
 timestamps {
     stages {
         stage('ZCASH_LITE_CLUSTER_START - Checkout') {
             steps {
-     	        checkout(
-                    git branch: "primary",
-                    url: 'https://github.com/chippr-robotics/chippr-bots')
+    	        checkout([
+                    $class: 'GitSCM', 
+                    branches: 
+                        [[name: 'refs/heads/primary']],
+                        doGenerateSubmoduleConfigurations: 
+                            false,
+                            extensions: [], 
+                            submoduleCfg: [], 
+                            userRemoteConfigs: 
+                                [[
+                                    credentialsId: env.GIT_CRED, 
+                                    url: env.GIT_URL
+                                ]]
+                ]) 
             }
         }
 
@@ -32,7 +54,7 @@ timestamps {
             steps{
                 sh """
                     cd "${env.WORKSPACE}/packages/compose/zcash-lite-cluster/"
-                    export ZCASHD_PRIME_NODE=192.168.1.135:38232 #$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' zcash_zcashd_1)":38232"
+                    export ZCASHD_PRIME_NODE="${env.SERVER_URL}":38232 #$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' zcash_zcashd_1)":38232"
                     docker-compose up -d 
                 """
             }
