--- a/packages/jenkins_pipelines/zcash-lite-cluster/Jenkinsfile
+++ b/packages/jenkins_pipelines/zcash-lite-cluster/Jenkinsfile
@@ -1,29 +1,32 @@
-pipeline {
-
-agent any
-
-environment {
-    // common environment
-    GIT_CRED = vault path: 'secrets/COMMON', key: 'GIT_CRED', vaultUrl: 'https://192.168.1.135:8200', credentialsId: 'vault-root-token', engineVersion: "2"
-    GIT_URL = vault path: 'secrets/COMMON', key: 'GIT_URL', vaultUrl: 'https://192.168.1.135:8200', credentialsId: 'vault-root-token', engineVersion: "2"
-    SERVER_URL = vault path: 'secrets/COMMON', key: 'SERVER_URL', vaultUrl: 'https://192.168.1.135:8200', credentialsId: 'vault-root-token', engineVersion: "2"
-    LOG_LEVEL='debug'
+def secrets = [
+        [path: 'secret/COMMON', engineVersion: 2, secretValues: [
+            [envVar: 'GIT_CRED', vaultKey: 'GIT_CRED'],
+            [envVar: 'GIT_URL', vaultKey: 'GIT_URL'],
+            [envVar: 'SERVER_URL', vaultKey: 'SERVER_URL']
+            ]],
+        [path: 'secret/ZCASH_LITE', engineVersion: 2, secretValues: [
+            [envVar: 'ZCASHD_IMAGE', vaultKey: 'ZCASHD_IMAGE']
+            ]]
+    ]
+def configuration = [vaultUrl: 'http://192.168.1.135:8200',
+                         vaultCredentialId: 'vault-token',
+                         engineVersion: 2]
     
-    // pipeline configuration
 
-    }
-
-timestamps {
+pipeline {
+    agent any
+  
     stages {
         stage('ZCASH_LITE_CLUSTER_START - Checkout') {
             steps {
+    	    withVault([configuration: configuration, vaultSecrets: secrets]) {
     	        checkout([
                     $class: 'GitSCM', 
                     branches: 
                         [[name: 'refs/heads/primary']],
                         doGenerateSubmoduleConfigurations: 
                             false,
-                            extensions: [], 
+                            extensions: [[$class: 'CloneOption', timeout: 120]], 
                             submoduleCfg: [], 
                             userRemoteConfigs: 
                                 [[
@@ -31,14 +34,16 @@ timestamps {
                                     url: env.GIT_URL
                                 ]]
                 ]) 
-            }
+            }}
         }
 
         stage('ZCASH_LITE_CLUSTER_START - Build') {
             steps {
-                sh 'docker pull "${env.ZCASHD_IMAGE}"'
+        	    withVault([configuration: configuration, vaultSecrets: secrets]) {
+                    sh 'docker pull $ZCASHD_IMAGE'
+        	    }
             }
-        }
+    	}
 
         stage('ZCASH_LITE_CLUSTER_START - Purge') {
             steps{
@@ -51,26 +56,27 @@ timestamps {
         }
     
         stage('ZCASH_LITE_CLUSTER_START - Boot') {
-            steps{
-                sh """
-                    cd "${env.WORKSPACE}/packages/compose/zcash-lite-cluster/"
-                    export ZCASHD_PRIME_NODE=${env.SERVER_URL}:38232 #$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' zcash_zcashd_1)":38232"
-                    docker-compose up -d 
-                """
-            }
+    	   steps{
+    	       withVault([configuration: configuration, vaultSecrets: secrets]) {
+                    sh 'export ZCASHD_PRIME_NODE=$SERVER_URL:38232' 
+    	       }
+    	       sh """
+    	            cd "${env.WORKSPACE}/packages/compose/zcash-lite-cluster/" 
+    	            docker-compose up -d
+    	       """
+    	    }
         }
     }//STAGES
-} //TIMESTAMPS
-
-    post {
-        changed {
-            withCredentials([string(credentialsId: 'discord_webhook', variable: 'WEBHOOK')]) {
-                discordSend description: 'Jenkins Pipeline Build', 
-                link: BUILD_URL, 
-                successful: currentBuild.resultIsBetterOrEqualTo('SUCCESS'), 
-                title: JOB_NAME, 
-                webhookURL: WEBHOOK
-            }
-        }
-    } //POST
 } //PIPELINE
+
+post {
+    changed {
+        withCredentials([string(credentialsId: 'discord_webhook', variable: 'WEBHOOK')]) {
+            discordSend description: 'Jenkins Pipeline Build', 
+            link: BUILD_URL, 
+            successful: currentBuild.resultIsBetterOrEqualTo('SUCCESS'), 
+            title: JOB_NAME, 
+            webhookURL: WEBHOOK
+        }
+    }
+} //POST
