--- a/packages/z-graph/package.json
+++ b/packages/z-graph/package.json
@@ -6,7 +6,9 @@
   "author": "chippr robotics llc",
   "license": "Apache-2.0",
   "dependencies": {
-    "lerna": "^6.6.1"
+    "dotenv": "^16.0.3",
+    "lerna": "^6.6.1",
+    "neo4j-driver": "^5.6.0"
   },
   "devDependencies": {
     "lerna": "^6.6.1"
