--- a/packages/compose/zcash/docker-compose-zcashd.yml
+++ b/packages/compose/zcash/docker-compose-zcashd.yml
@@ -18,6 +18,7 @@ services:
     mem_limit: 15G
     ports:
       - "0.0.0.0:$ZCASHD_P2P:8233"
+      - "0.0.0.0:$ZCASHD_RPC:8232"
       - "$ZCASHD_PROMETHEUSPORT:$ZCASHD_PROMETHEUSPORT"
     restart: always
 
