--- a/packages/compose/zcash/docker-compose-zcashd.yml
+++ b/packages/compose/zcash/docker-compose-zcashd.yml
@@ -12,9 +12,10 @@ services:
       - ZCASHD_INSIGHTEXPLORER=$ZCASHD_INSIGHTEXPLORER
       - ZCASHD_NETWORK=$ZCASHD_NETWORK
       - ZCASHD_PROMETHEUSPORT=$ZCASHD_PROMETHEUSPORT
-      - ZCASHD_RPCPASSWORD=$ZCASHD_RPCPASSWORD
-      - ZCASHD_RPCUSER=$ZCASHD_RPCUSER
       - ZCASHD_TXINDEX=$ZCASHD_TXINDEX
+    command:
+      - --reindex=$ZCASHD_REINDEX
+      - --lightwalletd=$ZCASHD_LIGHTWALLETD   
     ports:
       - "0.0.0.0:$ZCASHD_P2P:8233"
       - "0.0.0.0:$ZCASHD_RPC:8232"
