--- a/packages/compose/zcash/docker-compose-zcashd.yml
+++ b/packages/compose/zcash/docker-compose-zcashd.yml
@@ -13,6 +13,8 @@ services:
       - ZCASHD_NETWORK=$ZCASHD_NETWORK
       - ZCASHD_PROMETHEUSPORT=$ZCASHD_PROMETHEUSPORT
       - ZCASHD_TXINDEX=$ZCASHD_TXINDEX
+      - ZCASHD_RPCPASSWORD=$ZCASHD_RPCPASSWORD
+      - ZCASHD_RPCUSER=$ZCASHD_RPCUSER
     command:
       - --reindex=$ZCASHD_REINDEX
       - --lightwalletd=$ZCASHD_LIGHTWALLETD   
