--- a/packages/compose/zcash/docker-compose-zcashd.yml
+++ b/packages/compose/zcash/docker-compose-zcashd.yml
@@ -15,6 +15,7 @@ services:
       - ZCASHD_TXINDEX=$ZCASHD_TXINDEX
       - ZCASHD_RPCPASSWORD=$ZCASHD_RPCPASSWORD
       - ZCASHD_RPCUSER=$ZCASHD_RPCUSER
+      - ZCASHD_RPCBIND=$ZCASHD_RPCBIND
     ports:
       - "$ZCASHD_RPC:8233"
       - "$ZCASHD_P2P:8232"
