--- a/packages/compose/zcash/docker-compose-zcashd.yml
+++ b/packages/compose/zcash/docker-compose-zcashd.yml
@@ -16,7 +16,7 @@ services:
       - ZCASHD_RPCPASSWORD=$ZCASHD_RPCPASSWORD
       - ZCASHD_RPCUSER=$ZCASHD_RPCUSER
       - ZCASHD_RPCBIND=$ZCASHD_RPCBIND
-    expose:
+    ports:
       - "$ZCASHD_RPC:8232"
       - "$ZCASHD_P2P:8233"
       - "$ZCASHD_PROMETHEUSPORT:$ZCASHD_PROMETHEUSPORT"
