--- a/packages/compose/zcash/docker-compose-zcashd.yml
+++ b/packages/compose/zcash/docker-compose-zcashd.yml
@@ -16,6 +16,7 @@ services:
       - ZCASHD_RPCPASSWORD=$ZCASHD_RPCPASSWORD
       - ZCASHD_RPCUSER=$ZCASHD_RPCUSER
       - ZCASHD_RPCBIND=$ZCASHD_RPCBIND
+      - ZCASHD_ALLOWIP=$ZCASHD_ALLOWIP
     ports:
       - "$ZCASHD_P2P:8232"
       - "$ZCASHD_RPC:8233"
