--- a/packages/jenkins_pipelines/zcash/Jenkinsfile
+++ b/packages/jenkins_pipelines/zcash/Jenkinsfile
@@ -20,6 +20,8 @@ def secrets = [
             [envVar: 'ZCASHD_METRICSIP', vaultKey: 'ZCASHD_METRICSIP'],
             [envVar: 'ZCASHD_REINDEX', vaultKey: 'ZCASHD_REINDEX'],
             [envVar: 'ZCASHD_LIGHTWALLETD', vaultKey: 'ZCASHD_LIGHTWALLETD'],
+            [envVar: 'ZCASHD_ALLOWIP', vaultKey: 'ZCASHD_ALLOWIP'],
+            [envVar: 'ZCASHD_RPCBIND', vaultKey: 'ZCASHD_RPCBIND'],
             ]]
     ]
 def configuration = [vaultUrl: 'http://192.168.1.135:8200',
