--- a/lerna.json
+++ b/lerna.json
@@ -4,5 +4,6 @@
   ],
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "version": "1.1.49"
+  "version": "1.1.50",
+  "$schema": "node_modules/lerna/schemas/lerna-schema.json"
 }
