--- a/packages/jenkins_pipelines/mastodon/Jenkinsfile
+++ b/packages/jenkins_pipelines/mastodon/Jenkinsfile
@@ -11,6 +11,36 @@ def secrets = [
             [envVar: 'REDIS_VOLUME', vaultKey: 'REDIS_VOLUME'],
             [envVar: 'MASTODON_IMAGE', vaultKey: 'MASTODON_IMAGE'],
             [envVar: 'MASTODON_SYSTEM_VOLUME', vaultKey: 'MASTODON_SYSTEM_VOLUME'],
+            [envVar: 'LOCAL_DOMAIN', vaultKey: 'LOCAL_DOMAIN'],
+            [envVar: 'REDIS_HOST', vaultKey: 'REDIS_HOST'],
+            [envVar: 'REDIS_PORT', vaultKey: 'REDIS_PORT'],
+            [envVar: 'DB_HOST', vaultKey: 'DB_HOST'],
+            [envVar: 'DB_USER', vaultKey: 'DB_USER'],
+            [envVar: 'DB_NAME', vaultKey: 'DB_NAME'],
+            [envVar: 'DB_PASS', vaultKey: 'DB_PASS'],
+            [envVar: 'DB_PORT', vaultKey: 'DB_PORT'],
+            [envVar: 'ES_ENABLED', vaultKey: 'ES_ENABLED'],
+            [envVar: 'ES_HOST', vaultKey: 'ES_HOST'],
+            [envVar: 'ES_PORT', vaultKey: 'ES_PORT'],
+            [envVar: 'ES_USER', vaultKey: 'ES_USER'],
+            [envVar: 'ES_PASS', vaultKey: 'ES_PASS'],
+            [envVar: 'SECRET_KEY_BASE', vaultKey: 'SECRET_KEY_BASE'],
+            [envVar: 'OTP_SECRET', vaultKey: 'OTP_SECRET'],
+            [envVar: 'VAPID_PRIVATE_KEY', vaultKey: 'VAPID_PRIVATE_KEY'],
+            [envVar: 'VAPID_PUBLIC_KEY', vaultKey: 'VAPID_PUBLIC_KEY'],
+            [envVar: 'SMTP_SERVER', vaultKey: 'SMTP_SERVER'],
+            [envVar: 'SMTP_PORT', vaultKey: 'SMTP_PORT'],
+            [envVar: 'SMTP_LOGIN', vaultKey: 'SMTP_LOGIN'],
+            [envVar: 'SMTP_PASSWORD', vaultKey: 'SMTP_PASSWORD'],
+            [envVar: 'SMTP_FROM_ADDRESS', vaultKey: 'SMTP_FROM_ADDRESS'],
+            [envVar: 'S3_ENABLED', vaultKey: 'S3_ENABLED'],
+            [envVar: 'S3_BUCKET', vaultKey: 'S3_BUCKET'],
+            [envVar: 'AWS_ACCESS_KEY_ID', vaultKey: 'AWS_ACCESS_KEY_ID'],
+            [envVar: 'AWS_SECRET_ACCESS_KEY', vaultKey: 'AWS_SECRET_ACCESS_KEY'],
+            [envVar: 'S3_ALIAS_HOST', vaultKey: 'S3_ALIAS_HOST'],
+            [envVar: 'IP_RETENTION_PERIOD', vaultKey: 'IP_RETENTION_PERIOD'],
+            [envVar: 'SESSION_RETENTION_PERIOD', vaultKey: 'SESSION_RETENTION_PERIOD'],
+
         ]]
     ]
 def configuration = [vaultUrl: 'http://192.168.1.135:8200',
