--- a/packages/jenkins_pipelines/mastodon/Jenkinsfile
+++ b/packages/jenkins_pipelines/mastodon/Jenkinsfile
@@ -24,6 +24,7 @@ def secrets = [
             [envVar: 'ES_PORT', vaultKey: 'ES_PORT'],
             [envVar: 'ES_USER', vaultKey: 'ES_USER'],
             [envVar: 'ES_PASS', vaultKey: 'ES_PASS'],
+            [envVar: 'ES_IMAGE', vaultKey: 'ES_IMAGE'], 
             [envVar: 'SECRET_KEY_BASE', vaultKey: 'SECRET_KEY_BASE'],
             [envVar: 'OTP_SECRET', vaultKey: 'OTP_SECRET'],
             [envVar: 'VAPID_PRIVATE_KEY', vaultKey: 'VAPID_PRIVATE_KEY'],
@@ -79,7 +80,7 @@ pipeline {
                     sh 'docker pull $MASTODON_IMAGE'
                     sh 'docker pull $POSTGRES_IMAGE'
                     sh 'docker pull $REDIS_IMAGE'
-                    
+
         	    }
             }
     	}
