--- a/packages/compose/krakend/docker-compose.yml
+++ b/packages/compose/krakend/docker-compose.yml
@@ -10,4 +10,6 @@ services:
       - FC_PARTIALS=/etc/krakend/config/partials
       - FC_SETTINGS=/etc/krakend/config/settings/test
       - FC_TEMPLATES=/etc/krakend/config/templates
+    ports:
+      - "$KRAKEN_HTTP:80"
     command: ["run","-dc","krakend.tmpl"]
