--- a/packages/jenkins_pipelines/etc_mordor/Jenkinsfile
+++ b/packages/jenkins_pipelines/etc_mordor/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     stages {
         stage('MORDOR - Checkout') {
             steps {
-    	    withVault([configuration: common.configuration, vaultSecrets: common.secrets]) {
+    	    withVault([configuration: common.vaultConfiguration, vaultSecrets: common.secrets]) {
     	        checkout([
                     $class: 'GitSCM', 
                     branches: 
@@ -24,7 +24,7 @@ pipeline {
 
         stage('MORDOR - Build') {
             steps {
-        	    withVault([configuration: common.configuration, vaultSecrets: mordor.secrets]) {
+        	    withVault([configuration: common.vaultConfiguration, vaultSecrets: mordor.secrets]) {
                     sh 'docker pull $CG_IMAGE'
         	    }
             }
@@ -32,7 +32,7 @@ pipeline {
 
         stage('MORDOR - Purge') {
             steps{
-                withVault([configuration: common.configuration, vaultSecrets: mordor.secrets]) {
+                withVault([configuration: common.vaultConfiguration, vaultSecrets: mordor.secrets]) {
                     sh """
                         cd packages/compose/coregeth/
                         docker stack rm MORDOR_CLUSTER  || echo "No service running"
@@ -50,7 +50,7 @@ pipeline {
         
         stage('MORDOR - Boot') {
     	   steps{
-    	        withVault([configuration: common.configuration, vaultSecrets: mordor.secrets]) {
+    	        withVault([configuration: common.vaultConfiguration, vaultSecrets: mordor.secrets]) {
                     sh """
     	                cd packages/compose/coregeth/
     	                docker stack deploy -c docker-compose.yml MORDOR_CLUSTER
