--- a/packages/jenkins_pipelines/etc_mordor/Jenkinsfile
+++ b/packages/jenkins_pipelines/etc_mordor/Jenkinsfile
@@ -1,6 +1,6 @@
+def common = load '../vars/common.groovy'
+def mordor = load '..vars/mordor.grovvy'
 
- @Library ('coldStart') _
- 
 pipeline {
     agent any
 
